test/expected/cast_type_i.out
cast x into type int
            ^
13: error: can not cast into "typedef"
